--- a/index.html.html
+++ b/index.html.html
@@ -19,7 +19,7 @@
             <hr>
             <small>실행결과</small>
             <pre>
-                <img src="min/alert.PNG" alt="실행결과">
+                <img src="./alert.PNG" alt="실행결과">
             </pre>
     </figure>
 </body>
