--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>독일 태생으로 스위스와 미국에서 활동하며 1921년 광전효과에 관한 기여로 인하여 노벨 물리학상을 수상한 아인슈타인을 소개한다.
         </p>
         <figure>
-            <img width="300" height="400" src="800px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg">
+            <img width="300" height="400" src="./800px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg">
             <figcaption>1921년의 아인슈타인</figcaption>
         </figure>
     </header>
